--- a/app/scss/_calculator.scss
+++ b/app/scss/_calculator.scss
@@ -15,6 +15,7 @@
   flex-direction: column;
   align-items: center;
   padding-bottom: 3rem;
+  font-family: Open-Sans, sans-serif;
 }
 
 .calculator__input {
@@ -62,7 +63,7 @@
     height: 2rem;
     background-color: $third-green;
     margin-bottom: 1rem;
-
+    padding:0.6rem;
     span:last-child {
       font-weight: 700;
     }
@@ -71,6 +72,7 @@
       background-color: $primary-blue;
       width: 45%;
       height: 38px;
+      padding:0.7rem;
     }
   }
 }
