--- a/app/scss/_calculator.scss
+++ b/app/scss/_calculator.scss
@@ -57,6 +57,7 @@
   li {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     color: white;
     list-style: none;
     border-radius: 0.3rem;
