--- a/app/scss/_calculator.scss
+++ b/app/scss/_calculator.scss
@@ -55,6 +55,7 @@
   width: 100%;
 
   li {
+    opacity:0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -62,6 +63,7 @@
     list-style: none;
     border-radius: 0.3rem;
     height: 2rem;
+    box-shadow: 0 3px 6px #00000029;
     background-color: $third-green;
     margin-bottom: 1rem;
     padding:0.6rem;
@@ -70,10 +72,12 @@
     }
 
     &:last-child {
+      box-shadow: 0 3px 6px #00000029;
       background-color: $primary-blue;
       width: 45%;
       height: 38px;
       padding:0.7rem;
+      opacity:1;
     }
   }
 }
