--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -90,7 +90,7 @@
   height: 44rem;
 
   .banner {
-    background: url("../assets/Background.png") no-repeat center /cover;
+    background: url("assets/Background.png") no-repeat center /cover;
     height: 50%;
   }
 
